# rag_platform

./: .env  .env.example  .gitignore  pyproject.toml
config/: clarification_policies.json
evaluation/blueprints/: ecommerce_case_plan.json  ecommerce_document_plan.json
evaluation/corpus/: catalog.json  manifest.jsonl  render_manifest.jsonl
evaluation/datasets/: rag_action_calibration_v1.jsonl  rag_dependent_multi_hop_v1.jsonl  rag_eval_v1.frozen.jsonl  rag_eval_v1.generated.jsonl  rag_eval_v1.generated.raw.jsonl  rag_eval_v1.mapped.jsonl  rag_eval_v1.reviewed.all.jsonl  rag_eval_v1.reviewed.jsonl  rag_eval_v2.frozen.jsonl
evaluation/prompts/: answer_judge.txt  case_generate.txt  case_review.txt  document_generate.txt  document_review.txt
evaluation/reports/: M10_1_ACTION_CLARIFY6_20260612.json  M10_1_ACTION_CLARIFY6_20260612.md  M10_1_ACTION_FALSE_REFUSAL_8_20260612.json  M10_1_ACTION_FALSE_REFUSAL_8_20260612.md  M10_1_DATASET_REVIEW_20260612.md  M10_1_E2E_COMPLEX_20260612.md  M10_1_E2E_V2_20260612.md  M10_1_E2E_V2_COMPARISON_20260612.md  M10_1_FINAL_E2E_V2_20260612.md  M10_1_REFUSE_BOUNDARY_3_20260612.json  M10_1_REFUSE_BOUNDARY_3_20260612.md  M10_2_FINAL_ACCEPTANCE_20260612.md  M10_2_FINAL_E2E_V2_20260612.md  M10_E2E_COMPLEX_CONTROL_20260612.md  M10_E2E_COMPLEX_DECOMP_20260612.md  M10_E2E_V2_DECOMP_20260612.md  M9_E2E_ACTION_CALIBRATION6_20260612.json  M9_E2E_ACTION_CALIBRATION6_20260612.md  M9_E2E_V2_ADAPTIVE_20260612.md  M9_E2E_V2_COMPARISON_20260612.md  M9_E2E_V2_CONTROL_20260612.md  V0_DEVELOPMENT_20260610.json  (+11 more)
scripts/: calibrate_retrieval_quality.py  compare_adaptive_retrieval.py  compare_dependent_multi_hop.py  compare_query_decomposition.py  create_corrected_eval_dataset.py  freeze_eval_dataset.py  generate_eval_cases.py  generate_eval_corpus.py  generate_eval_report.py  ingest_eval_corpus.py  map_eval_evidence.py  register_action_calibration.py  register_eval_corpus.py  render_eval_corpus.py  review_eval_cases.py  review_eval_corpus.py  run_rag_evaluation.py
tests/: test_app_factory.py
(+350 files in other folders)
