[project]
name = "rag-platform"
version = "0.1.0"
description = "Enterprise RAG platform based on FastAPI, LangChain, LangGraph, MySQL and Milvus"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "pymysql",
    "sqlalchemy",
    "python-dotenv",
    "langchain",
    "langgraph",
    "pymilvus",
    "httpx",
    "orjson",

    # 模块 2 新增：解析 docx
    "python-docx",

    # 模块 2 新增：解析 pdf
    "pypdf",

    # 模块 2 新增：FastAPI 接收 multipart/form-data 文件上传
    "python-multipart",

    # 模块 6 新增：Elasticsearch Python 客户端
    "elasticsearch>=8.17,<9",
    "langchain",
    "langchain-core",
    "langgraph",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
]
eval = [
    "reportlab>=4,<5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: 需要真实数据库或外部基础设施的集成测试",
]
